   * added support for Eaton EMP002 sensor for ATS16 NM2 sub-driver. [#2286]
   * mapping table updates for apc-mib sub-driver. [#2264]

 - usbhid-ups driver:
   * `arduino-hid` subdriver was enhanced from "initial bare bones" experimental
     set of mapped data points to support some 20 more mappings to make it more
     useful as an UPS driver, not just a controller developer sandbox. [#2188]
   * The `onlinedischarge` configuration flag name was too ambiguous and got
     deprecated (will be supported but no longer promoted by documentation),
     introducing `onlinedischarge_onbattery` as the meaningful alias. [#2213]
   * Logged notifications about `OL+DISCHRG` state should now be throttled
     (see the driver manual page for more details) [#2214, #2215]:
     - If `battery.charge` is available, make the message when entering the
       state and then only if the charge differs from that when we posted
       the earlier message (e.g. really discharging) and is under
       `onlinedischarge_log_throttle_hovercharge` value (defaults to 100%);
     - Also can throttle to a time frequency configurable by a new option
       `onlinedischarge_log_throttle_sec`, by default 30 sec if `battery.charge`
       is not reported by the device (should be frequent by default, in case
       the UPS-reported state combination does reflect a bad power condition).

 - Various code and documentation fixes for NSS crypto support. [#2274, #2268]

 - Laid foundations for the SmartNUT effort (aiming to integrate drivers with
   some other backends than the networked NUT data server process).

 - Eaton contributed recipes and scripts used to create the IPP for Unix bundle
   (UPS software companion), delivering NUT packages with an interactive
   installer and some system integration scripts (events, notifications,
   status, shutdown daemon...) [#2288]


Release notes for NUT 2.8.1 - what's new since 2.8.0
----------------------------------------------------
